--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -426,3 +426,10 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
   title           = {Analyzing the Performance of Generalized Hill Climbing Algorithms},
   year            = {2004}
 }
+
+@article{ Comparison,
+  author          = {Jung Hee Cheon and Dongwoo Kim and Duhyeong Kim and Hun hee Lee and Keewoo Lee},
+  journal         = {International Conference on the Theory and Application of Cryptology and Information Security},
+  title           = {Numerical Method for Comparison on Homomorphically Encrypted Numbers},
+  year            = {2019}
+}
