--- a/Preparation.tex
+++ b/Preparation.tex
@@ -372,16 +372,16 @@ All software dependencies in this project use permissive libraries that allow th
 \def\arraystretch{1.25}
 \begin{tabular}{|p{5cm}|p{4cm}|}
     \hline
-    \textbf{Dependency} & \textbf{Licence} \\
+    \textrm{\textbf{Dependency}} & \textrm{\textbf{Licence}} \\
     \hline \hline
-    \texttt{Multiprocessing} & \multirow{3}{*}{3-Clause BSD ~\cite{BSD}} \\ 
+    \texttt{Multiprocessing} & \multirow{3}{*}{\textrm{3-Clause BSD ~\cite{BSD}}} \\ 
     \texttt{NumPy} & \\ 
     \texttt{SymPy} & \\
     \hline
-    \texttt{Microsoft SEAL} & \multirow{2}{*}{MIT ~\cite{MIT}} \\
+    \texttt{Microsoft SEAL} & \multirow{2}{*}{\textrm{MIT ~\cite{MIT}}} \\
     \texttt{SEAL-Python} & \\
     \hline
-    \texttt{Matplotlib} & \multirow{3}{*}{PSFL ~\cite{PSFL}} \\ 
+    \texttt{Matplotlib} & \multirow{3}{*}{\textrm{PSFL ~\cite{PSFL}}} \\ 
     \texttt{Python} & \\
     \texttt{Tkinter} & \\
     \hline
@@ -400,13 +400,13 @@ The original project proposal mentioned that external computational resources mi
 \begin{table}[H]
 \centering
 \begin{tabular}{>{\hspace{1em}}l l}
-    \myheading{Processor}
-    CPU                       & \SI{8}{\; Cores}                                            \\
-    GPU                       & \SI{14}{\; Cores}                                           \\
-    Neural Engine             & \SI{16}{\; Cores}                                           \\
-    Memory Bandwidth          & \SI{200}{\; GB \per s}                                      \\
-    \myheading{Memory}
-    RAM                       & \SI{32}{\; GB \text{ (unified memory)}}                     \\
+    \myheading{\textrm{Processor}}
+    \textrm{CPU}                       & \SI{8}{\; Cores}                                            \\
+    \textrm{GPU}                       & \SI{14}{\; Cores}                                           \\
+    \textrm{Neural Engine}             & \SI{16}{\; Cores}                                           \\
+    \textrm{Memory Bandwidth}          & \SI{200}{\; GB \per s}                                      \\
+    \myheading{\textrm{Memory}}
+    \textrm{RAM}                       & \SI{32}{\; GB \text{ (unified memory)}}                     \\
 \end{tabular}
 \caption{Computer Specifications}
 \label{tab:specs}
