--- a/dissertation.tex
+++ b/dissertation.tex
@@ -61,6 +61,9 @@
 \usepackage{sidecap} %for figure caption on the side
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{pifont}
+\newcommand{\cmark}{\ding{51}}%
+\newcommand{\xmark}{\ding{55}}
 \usepackage[inline]{enumitem}
 \usepackage[hidelinks]{hyperref}
 \usepackage{amssymb}
